# fake-face-detection

./: .gitignore  LICENSE  Makefile  README.md  plot_result.ipynb  plot_result.py  pyproject.toml  requirements.txt  train_EfficientNetV2-S.py  train_ResNet50.py  train_ResNet50ViT.py  train_ResNet50_CBAM.py  train_Transsformer.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EfficientNetV2-S.ipynb  Real_Or_Fake.ipynb  plot_result.ipynb  trials_ResNet50.ipynb  trials_ResNet50ViT.ipynb  trials_ResNet50_CBAM.ipynb  trials_ResNet50_SFA.ipynb  trials_Resnet50_CA.ipynb
src/: __init__.py  dataset.py  features.py  plots.py
src/dataloader/: dataloader.py
src/model/: EfficientNetV2-S.py  Resnet50.py  Resnet50_CA.py  Resnet50_CBAM.py  Resnet50_LKA.py  Resnet50_MobileNetV2.py  ViT_B_16.py
src/modeling/: predict.py  train.py
src/train/: train_EfficientNetV2-S.py  train_ResNet50.py  train_ResNet50_CBAM.py  train_Resnet50_CA.py  train_Resnet50_LKA.py  train_Resnet50_MobileNetV2.py
src/utils/: load_checkpoint.py  plot_result.py  print_result.py  test.py  train.py
